fix - lighter font and responsive button

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: "W95FA";
-  src: url("./fonts/MS\ Sans\ Serif\ Bold.ttf") format("truetype");
+  src: url("./fonts/W95FA.otf") format("opentype");
 }
