--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -3,23 +3,23 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 23px;
-    width: 75px;
+    height: auto;
+    width: auto;
     left: 33px;
     top: 16px;
-    padding: 6px, 18px, 6px, 18px;
+    padding: 6px 18px;
     background-color: #C0C0C0;
     box-shadow: inset -1px -1px 0px #0A0A0A, inset 1px 1px 0px #FFFFFF, inset -2px -2px 0px #808080, inset 2px 2px 0px #DFDFDF;
     border: none;
 }
 
-.neutral p {
+.neutral span {
+    display: inline-block !important;
     font-family: "W95FA", sans-serif;
-    width: 36px;
-    height: 12px;
+    font-weight: 100 !important;
+    width: 100%;
+    height: 100%;
     font-size: 10px;
     line-height: 12px;
-    display: flex;
-    align-items: center;
     text-align: center;
 }
