--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,3 +1,4 @@
+/* NEUTRAL */
 .neutral {
     display: flex;
     flex-direction: row;
@@ -10,16 +11,47 @@
     padding: 6px 18px;
     background-color: #C0C0C0;
     box-shadow: inset -1px -1px 0px #0A0A0A, inset 1px 1px 0px #FFFFFF, inset -2px -2px 0px #808080, inset 2px 2px 0px #DFDFDF;
+    cursor: pointer;
     border: none;
 }
 
+.neutral div {
+    display: flex;
+    border: none;
+}
+  
 .neutral span {
     display: inline-block !important;
     font-family: "W95FA", sans-serif;
-    font-weight: 100 !important;
     width: 100%;
     height: 100%;
     font-size: 10px;
     line-height: 12px;
     text-align: center;
+}
+/* ACTIVE */
+.neutral:active {
+    box-shadow: inset -1px -1px 0px #FFFFFF, inset 1px 1px 0px #0A0A0A, inset -2px -2px 0px #DFDFDF, inset 2px 2px 0px #808080;
+}
+
+/* FOCUS */
+
+/* .neutral:focus {
+    padding: 3px 3px 4px;
+}
+
+.neutral:focus div {
+    border: 1px dotted #000;
+    box-sizing: border-box;
+    padding: 1.5px 14px;
+} */
+
+.neutral:focus {
+    padding: 2px 2px 3px;
+}
+
+.neutral:focus div {
+    border: 1px dotted #000;
+    box-sizing: border-box;
+    padding: 2.5px 15px;
 }
