fix - corrections to the code organization and more details

--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -27,3 +27,9 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
 }
+
+/* SEARCH INPUT */
+input[type="search"]::-webkit-search-cancel-button {
+    display: none;
+  }
+  
