--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -1,20 +1,37 @@
 .windowsModal {
-  width: 321px;
-  min-height: 143px;
+  width: 642px;
+  min-height: 286px;
+  padding: 4px 4px 24px;
   background-color: #c0c0c0;
   position: fixed;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%);
-  z-index: 999;
+  z-index: 3;
+  box-shadow: inset -2px -2px 0px #0a0a0a, inset 2px 2px 0px #dfdfdf,
+    inset -3px -3px 0px #808080, inset 3px 3px 0px #ffffff;
+}
+.windowsModalBar {
+  width: 100%;
+  height: 40px;
+  background: linear-gradient(90deg, #000080 0%, #1084d0 100%);
+}
+.windowsModalContent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: auto;
+  height: 100%;
+  padding: 24px;
 }
 
 .windowsModal--overlay {
+  z-index: 2;
   display: inline-block;
   width: 200vw;
   height: 200vh;
   position: fixed;
   top: -100vh;
   left: -100vw;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.3);
 }
