--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 body {
   font-size: 1.2rem;
   font-family: "MS Sans Serif", sans-serif;
+  overflow: auto;
 }
 
 a {
@@ -47,10 +48,62 @@ p {
 }
 .codeWindow {
   width: 80rem;
-  margin-bottom: 2rem;
 }
 .codeContainer {
   padding: 1rem 1rem 1rem 0.3rem;
   height: auto;
   background-color: #000;
+}
+.windowsBorders {
+  width: 80rem;
+  padding: 3px;
+  box-shadow: inset -2px -2px 0px #0a0a0a, inset 3px 3px 0px #ffffff,
+    inset -3px -3px 0px #808080, inset 3px 3px 0px #dfdfdf;
+  margin: 3rem 0;
+}
+
+*::-webkit-scrollbar {
+  width: 0.8em;
+}
+
+*::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+  background-color: #dfdfdf;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #b8c0c1;
+  box-shadow: inset -1px -1px 0px #0a0a0a, inset 1px 1px 0px #ffffff,
+    inset -2px -2px 0px #808080, inset 2px 2px 0px #dfdfdf;
+}
+
+*::-webkit-scrollbar-button {
+  display: block;
+  height: 17px;
+  background: #dfdfdf;
+  background-image: url("./assets/arrow.svg");
+  background-repeat: no-repeat;
+  transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+}
+*::-webkit-scrollbar-button:vertical:start:increment {
+  display: none;
+}
+*::-webkit-scrollbar-button:vertical:start:decrement {
+  transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+}
+*::-webkit-scrollbar-button:horizontal:start:decrement {
+  display: none;
+}
+*::-webkit-scrollbar-button:vertical:end:increment {
+}
+*::-webkit-scrollbar-button:vertical:end:decrement {
+  display: none;
+}
+*::-webkit-scrollbar-button:horizontal:end:increment {
+  display: none;
+}
+*::-webkit-scrollbar-corner {
+  background: #dfdfdf;
 }
