--- a/src/App.css
+++ b/src/App.css
@@ -4,22 +4,64 @@
   font-family: "MS Sans Serif";
   src: url("./fonts/W95FA.otf") format("opentype");
 }
-
 @font-face {
   font-family: "MS Sans Serif Bold";
   src: url(./fonts/MS\ Sans\ Serif\ Bold.ttf) format("truetype");
 }
-
 body {
   font-size: 1.2rem;
   font-family: "MS Sans Serif", sans-serif;
 }
-
 a {
   color: #222222;
 }
 p {
   margin: 0 0 1rem 0;
+}
+*::-webkit-scrollbar {
+  width: 0.8em;
+}
+*::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+  background-color: #dfdfdf;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #b8c0c1;
+  box-shadow: inset -1px -1px 0px #0a0a0a, inset 1px 1px 0px #ffffff,
+    inset -2px -2px 0px #808080, inset 2px 2px 0px #dfdfdf;
+}
+*::-webkit-scrollbar-button {
+  display: block;
+  height: 17px;
+  background: #dfdfdf;
+  background-repeat: no-repeat;
+}
+*::-webkit-scrollbar-button:vertical:start:increment {
+  display: none;
+}
+*::-webkit-scrollbar-button:vertical:start:decrement {
+  background-image: url("./assets/arrow-up.svg");
+}
+*::-webkit-scrollbar-button:vertical:end:decrement {
+  display: none;
+}
+*::-webkit-scrollbar-button:vertical:end:increment {
+  background-image: url("./assets/arrow-down.svg");
+}
+*::-webkit-scrollbar-button:horizontal:start:decrement {
+  background-image: url("./assets/arrow-left.svg");
+}
+*::-webkit-scrollbar-button:horizontal:start:increment {
+  display: none;
+}
+*::-webkit-scrollbar-button:horizontal:end:increment {
+  background-image: url("./assets/arrow-right.svg");
+}
+*::-webkit-scrollbar-button:horizontal:end:decrement {
+  display: none;
+}
+*::-webkit-scrollbar-corner {
+  background: #dfdfdf;
 }
 
 /* APP */
@@ -62,54 +104,15 @@ p {
     inset -3px -3px 0px #808080, inset 3px 3px 0px #dfdfdf;
   margin: 4rem 0;
 }
-
-*::-webkit-scrollbar {
-  width: 0.8em;
+.modalContent {
+  display: flex;
+  flex-direction: row;
 }
-
-*::-webkit-scrollbar-track {
-  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
-  background-color: #dfdfdf;
+.modalInfo {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 0 1.5rem;
 }
-
-*::-webkit-scrollbar-thumb {
-  background-color: #b8c0c1;
-  box-shadow: inset -1px -1px 0px #0a0a0a, inset 1px 1px 0px #ffffff,
-    inset -2px -2px 0px #808080, inset 2px 2px 0px #dfdfdf;
-}
-
-*::-webkit-scrollbar-button {
-  display: block;
-  height: 17px;
-  background: #dfdfdf;
-  background-repeat: no-repeat;
-}
-
-*::-webkit-scrollbar-button:vertical:start:increment {
-  display: none;
-}
-*::-webkit-scrollbar-button:vertical:start:decrement {
-  background-image: url("./assets/arrow-up.svg");
-}
-*::-webkit-scrollbar-button:vertical:end:decrement {
-  display: none;
-}
-*::-webkit-scrollbar-button:vertical:end:increment {
-  background-image: url("./assets/arrow-down.svg");
-}
-
-*::-webkit-scrollbar-button:horizontal:start:decrement {
-  background-image: url("./assets/arrow-left.svg");
-}
-*::-webkit-scrollbar-button:horizontal:start:increment {
-  display: none;
-}
-*::-webkit-scrollbar-button:horizontal:end:increment {
-  background-image: url("./assets/arrow-right.svg");
-}
-*::-webkit-scrollbar-button:horizontal:end:decrement {
-  display: none;
-}
-*::-webkit-scrollbar-corner {
-  background: #dfdfdf;
+.modalInfo h6 {
+  margin: 0.3rem 0 1rem;
 }
